# phase-10-git-ci

./: .gitignore  NOTES.md  README.md  github-workflow-cheatsheet.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/.github/workflows/: ci.yml
tests/: test_main.py
